--- a/a_news/templates/a_news/home.html
+++ b/a_news/templates/a_news/home.html
@@ -1,7 +1,4 @@
-{% extends "base.html" %}
-
-{% block title %} Home {% endblock %}
-
-{% block body %}
+{% extends "base.html" %} {% block title %} Home {% endblock %} {% block body %}
 <h1>Home</h1>
+
 {% endblock %}
