--- a/templates/base.html
+++ b/templates/base.html
@@ -5,14 +5,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="{% static 'assets/favicon.ico' %}" type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="shortcut icon"
+      href="{% static 'assets/favicon.ico' %}"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-    <title>{% block title %}  {% endblock %}</title>
+    <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
-    {% block body %}
+    {% include "navbar.html" %} {% block body %}
     <!-- Default content can go here -->
     {% endblock %}
+
+    {% include "footer.html" %}
     <script src="{% static 'js/script.js' %}"></script>
   </body>
 </html>
