Dynamic content from model

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 <section class="Main">
   <div class="logo">
-    <a href="#">News<span>Nepal</span></a>
+    <a href=" {% url "home" %} ">News<span>Nepal</span></a>
     <div class="login">
       <a href="#"><i class="fa-solid fa-user"></i> Login</a>
     </div>
