--- a/static/css/news.css
+++ b/static/css/news.css
@@ -113,7 +113,6 @@
 }
 
 /* HOME PAGE */
-
 .news-section {
   background-color: #f4f4f4;
   padding: 0 20px 0 20px;
@@ -121,26 +120,36 @@
 }
 
 .news-section h2 {
-
+  text-align: center;
   margin-bottom: 20px;
-  font-size: 1.5em;
+  font-size: 3em;
+  width: 100%;
+  background-color: #dfdede;
 }
 
 .news-grid {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  /* display: grid;
+  grid-template-columns: repeat(4, 1fr); */
   gap: 20px;
 }
 
 .news-item {
+  width: 30%;
   background: white;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
+  word-wrap: break-word;
 }
 
 .news-item img {
-  max-width: 100%;
+  object-fit: fill;
+  /* width: 100%; */
   height: auto;
   border-radius: 5px;
 }
