custom user model / user registration

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,9 +1,9 @@
 <section class="Main">
   <div class="logo">
-    <a href=' {% url "home" %} '>News<span>Nepal</span></a>
+    <a href='{% url "home" %}'>News<span>Nepal</span></a>
     <div class="login">
-      <a href=" {% url "login" %} "><i class="fa-solid fa-user"></i> Login</a>
-    </div>
+      <a href="{% url "postnews" %}"><i class="fa-solid fa-plus"></i> Post news</a>
+    </div>     
   </div>
   <hr />
   <header>
