--- a/a_news/templates/a_news/postnews.html
+++ b/a_news/templates/a_news/postnews.html
@@ -1,26 +1,65 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NewsNepal | Post news</title>
-</head>
-<body>
-    <form action="" method="POST" enctype="multipart/form-data">
-        <label for="">Title</label>
-        <input type="text" name="" id="">
-
-        <label for="">Image</label>
-        <input type="file">
-
-        <label for="">Content</label>
-        <textarea name="" id=""></textarea>
-
-        <select name="category" id="">
-            <option value="Capital">Capital</option>
-            <option value="sports">Sports</option>
-            <option value="Global">Global</option>
-        </select>
-    </form>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href=" {% static 'css/postnews.css' %} " />
+    <title>NewsNepal | Post News</title>
+  </head>
+  <body>
+    {% if messages %} {% for message in messages %}
+    <script>
+      alert("{{message}}");
+    </script>
+    {% endfor %} {% endif %}
+    <div class="container">
+      <h1>Post News</h1>
+      <form
+        method="POST"
+        action=" {% url 'postnews' %} "
+        enctype="multipart/form-data"
+      >
+        {% csrf_token %}
+        <div class="form-group">
+          <label for="id_title">Title:</label>
+          <input type="text" id="id_title" name="title" required />
+        </div>
+        <div class="form-group">
+          <label for="id_title">Author:</label>
+          <input
+            type="text"
+            id="id_title"
+            name="title"
+            value=" {{user}} "
+            required
+            readonly
+          />
+        </div>
+        <div class="form-group">
+          <label for="id_category">Category:</label>
+          <select id="id_category" name="category" required>
+            {% for category in category_list %}
+            <option value="{{ category }}">{{ category }}</option>
+            {% endfor %}
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="id_image">Image:</label>
+          <input type="file" id="id_image" name="image" required />
+        </div>
+        <div class="form-group">
+          <label for="id_content">Content:</label>
+          <textarea
+            id="id_content"
+            name="content"
+            rows="10"
+            required
+          ></textarea>
+        </div>
+        <button type="submit">Submit</button>
+      </form>
+    </div>
+  </body>
 </html>
