--- a/a_news/templates/a_news/news.html
+++ b/a_news/templates/a_news/news.html
@@ -8,7 +8,7 @@
     <div class="news-header">
       <h1>{{ news.title }}</h1>
       <div class="news-meta">
-        <span>Author: {{ news.author }} </span>
+        <span>Author: {{ news.author.name }} </span>
         <span>Published on: {{ news.date|date }} </span>
       </div>
     </div>
