--- a/a_news/templates/a_news/home.html
+++ b/a_news/templates/a_news/home.html
@@ -11,7 +11,7 @@
         <a href="{% url 'news' recent.id %}">
           <h2>{{ recent.title }}</h2>
         </a>
-        <p>{{ recent.author }} | {{ recent.published_date|date:"F j, Y" }}</p>
+        <p>{{ recent.author.name }} | {{ recent.published_date|date:"F j, Y" }}</p>
       </div>
     </div>
   </div>
@@ -27,7 +27,7 @@
     <a href=" {% url 'news' recent.id %} ">
       <div class="item {% if forloop.first %}active{% endif %}">
         <img src="{{ recent.image.url }}" alt="{{ recent.title }}" />
-        <div class="content">{{ recent.author }}</div>
+        <div class="content">{{ recent.author.name }}</div>
       </div>
     </a>
     {% endfor %}
@@ -48,7 +48,7 @@
             style="width: 400px; height: 300px"
           />
           <h3>{{ news.title }}</h3>
-          <p>{{ news.author }} | {{ news.published_date|timesince }} ago</p>
+          <p>{{ news.author.name }} | {{ news.published_date|timesince }} ago</p>
         </a>
       </div>
       {% endfor %}
