--- a/static/css/news.css
+++ b/static/css/news.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Rajdhani&display=swap");
 
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Rajdhani", sans-serif;
+}
+
 .container {
   background: rgb(241, 240, 240);
   display: flex;
@@ -173,4 +179,73 @@
 
 .news-item a:hover {
   text-decoration: underline;
+}
+
+
+/* NEWS BY CATEGORY  */
+
+.MainContainer{
+  background-color: #f4f4f4;
+  width: 100%;
+  padding: 1rem 0 1rem 0;
+}
+.Container {
+  width: 90%;
+  max-width: 1200px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.Container h1 {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+.Container hr {
+  margin-bottom: 1rem;
+}
+.Grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+.NewsItem {
+  background-color: #fafafa;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+.NewsImage {
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.NewsImage img {
+  width: 100%;
+  height: 350px;
+}
+.NewsContent {
+  padding: 15px;
+}
+.NewsContent a {
+  text-decoration: none;
+  color: #333;
+}
+.NewsContent a:hover {
+  color: black;
+}
+.NewsTitle {
+  font-size: 1.5em;
+  margin: 0 0 10px 0;
+}
+.NewsMeta {
+  font-size: 0.9em;
+  color: #666;
+  margin-bottom: 10px;
+}
+.NewsDescription {
+  font-size: 1em;
+  color: #333;
 }
